# data_structures

./: .gitignore  LICENSE  README.md  environment.yml  setup.cfg  uat_deployment_proof.ipynb
.github/workflows/: codeql-analysis.yml  deployments.yml  tests.yml
src/data_structures/: __init__.py  elements.py  queues.py  stacks.py
src/tests/: __init__.py  elements_test.py  test_queues.py  test_stacks.py
