[metadata]
name = data-structures-nicorodc
version = 0.3.2
author = Nicolás Agustín Rodriguez Castro
author_email = nicorodc@gmail.com
description = Useful data structures for problem solving
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/taurusongithub/data_structures
project_urls =
    Bug Tracker = https://github.com/taurusongithub/data_structures/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3

[options.packages.find]
where = src